<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_level1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_level1"/>
    <item
        android:id="@+id/action_level2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_level2"/>
    <item
        android:id="@+id/action_level3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_level3"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>
